# GK_SampleProvider

./: CMakeLists.txt  README.md  provider-register.sh  register.sh  settings.db
.github/: PULL_REQUEST_TEMPLATE.md
cmake/modules/: Findsblim-indication_helper.cmake  OpenLMIMacros.cmake
mof/: CMakeLists.txt  GK_Test.mof  GK_TestIndication.registration
src/: CMakeLists.txt  GK_Test.c  SettingDB.c  SettingDB.h
test/indication/: SFCBCreateFilter.localhost.xml  SFCBCreateHandler.localhost.xml  SFCBCreateSubscription.localhost.xml  SFCBDeleteFilter.localhost.xml  SFCBDeleteHandler.localhost.xml  SFCBDeleteSubscription.localhost.xml
